# SkillOpt

./: .gitignore  BRIGHTLEAD.md  CHANGELOG.md  CONTRIBUTING.md  GOAL-GITMOOT-SKILLOPT-MVP.md  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  skillopt.html
.cursor-plugin/: marketplace.json
blog/: index.html
docs/: guideline.html  hermes-skill-evolution.md
gitmoot_skillopt/: __init__.py  __main__.py  artifacts.py  cli.py  contracts.py  optimize.py  preflight.py
plugins/: README.md
scripts/: codex_azure_mi.sh  eval_livemathematicianbench_baseline.py  eval_only.py  eval_prompt_custom.py  eval_prompt_official.py  eval_verified400.sh  eval_verified400_multi.sh  eval_verified400_single.sh  gitmoot_contract_smoke.py  hermes_skill_evolve.py  launch_harness_canonical_claude18.sh  launch_harness_canonical_claude4_smoke.sh  launch_harness_canonical_wave1.sh  launch_harness_initial_claude4.sh  launch_harness_initial_spreadsheet_clean.sh  launch_lrctrl_fullrewrite_neutral3.sh  launch_lrctrl_fullrewrite_neutral3_spreadsheet_repeats.sh  launch_lrctrl_fullrewrite_neutral3_sq_lm_repeats.sh  launch_spreadsheet_full_replacements.sh  review.py  run_ablation_matrix.py  run_alfworld.sh  run_meta_skill_ablation.sh  run_missing_meta_parallel.sh  run_searchqa.sh  run_spreadsheetbench.sh  smoke_human_gate.py  smoke_superpowers.sh  smoke_webui_review.py  train.py
skillopt/: __init__.py  config.py  types.py
skillopt_sleep/: __main__.py  backend.py  config.py  consolidate.py  cursor_tool_guard.py  cycle.py  dashboard.html  dashboard.py  evidence.py  gate.py  handoff_backend.py  harvest.py  harvest_antigravity.py  harvest_cursor.py  harvest_hermes.py  harvest_opencode.py  harvest_pi.py  harvest_sources.py  llm_miner.py  memory.py  mine.py  prompts.py  replay.py  staging.py  state.py  types.py
skillopt_webui/: __main__.py  app.py
tests/: test_aiforai_harvesters.py  test_aiforai_mine.py  test_aiforai_run.py  test_aiforai_skill_adapter.py  test_aiforai_types.py  test_backend_pi.py  test_brightlead_lol010_regression.py  test_brightlead_pilot_dry_run.py  test_brightlead_preflight.py  test_brightlead_review_bundle.py  test_brightlead_sanitize_tasks.py  test_brightlead_smoke.py  test_devin_plugin.py  test_evolution_pipeline.py  test_gate.py  test_gate_fail_closed.py  test_gitmoot_adapter.py  test_gitmoot_artifacts.py  test_gitmoot_dataloader.py  test_gitmoot_examples.py  test_gitmoot_optimize_cli.py  test_gitmoot_package.py  test_gitmoot_result_contract.py  test_harvest_pi.py  (+18 more)
(+183 files in other folders)
